Version 5.4.2
- Fixed constant evalucation of some Spin2 operators
- Fixed bitfield access to memory references
- Fixed mixing reads and writes in C stdio
- Fixed mixing fgetc and fread in C stdio

Version 5.4.1
- Added __DATE__, __TIME__, __FILE__, and __LINE__ macros
- Added documentation for __VERSION__ macro
- Allowed wc and wz on indirect jumps on P2
- Check for gosub commands inside FCACHEd code
- Fixed incorrect common sub-expression elimination after labels
- Implemented some of the missing math functions from propeller2.h

Version 5.4.0
- Added some preliminary support for 64 bit integers (not complete yet)
- Added error for testp or testb used without flags
- Added --tabs=N for specifying amount of indent due to tabs
- Added support for __FUNCTION__ in BASIC and C
- Fix incorrect types in some const initializations.
- Fixed a problem with comments in the preprocessor
- Fixed incorrect line numbers after ASMCLK
- Fixed a bug in counting parameters when some are structs
- Fixed a bug in initializing arrays with modifiers like const
- Fixed parsing of ?: in Spin2
- Fixed some union initializer bugs
- Fixed setnib/setbyte/setword encoding for abbreviated forms
- Fixed an optimizer bug in loop strength reduction
- Handle mixed float/int in C ?: operator by promoting one side as necessary
- Made some low level C functions builtins
- Made FCACHE size settable on P2
- Support debug_baud macro to some degree
- Set default baud rate for C and BASIC based on -D_BAUD=n macro
- Tweaked listing file output slightly to include comments at end of file

Version 5.3.2
- Accept ' as a digit separator as well as '_' (C++14 uses single quote)
- Avoid FCACHE in FCACHE (e.g. for loops with empty org/end)
- Disable inlining for functions explicitly placed in COG or LUT memory
- Cleaned up ABORT handling to be Spin2 compatible
- Improved removal of DEBUG() statements when -g is left out
- Some internal changes for 64 bit support (still a work in progress)