@@ -252,6 +252,21 @@ then a call `incr(x)` where the second parameter is not given will be compiled a
 
 The keywords `__this` and `__class` are allowed in both C and C++ code, and mean the same as `this` and `class` in C++. These keywords are intended for use in C code which wishes to use FlexC's class features.
 
+### Range cases
+
+In switch statements you may add a range of consecutive cases by putting three dots between them. If the case values are integers you should put spaces around the dots to ensure the parser is not confused. So for example:
+```
+switch (x) {
+  case 1 ... 3: return 1;
+}
+```
+would be the same as
+```
+switch (x) {
+  case 1: case 2: case 3: return 1;
+}
+```
+
 ### Statement expressions
 
 A compound statement enclosed in parentheses may appear as an expression. This is a GCC extension which allows loops, switches, and similar features to appear within an expression.
