@@ -1,4 +1,5 @@
 Version 5.4.2
+- Added support for range cases (a ... b) to C
 - Fixed constant evalucation of some Spin2 operators
 - Fixed bitfield access to memory references
 - Fixed mixing reads and writes in C stdio
